# pc-token-monitor

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-02-pc-token-monitor.md  2026-06-05-adaptive-text-color.md  2026-06-06-context-aware-always-on-top.md  2026-06-06-overlay-layout-and-user.md
docs/superpowers/specs/: 2026-06-02-pc-token-monitor-design.md  2026-06-05-adaptive-text-color-design.md  2026-06-06-context-aware-always-on-top-design.md  2026-06-06-macos-support-design.md  2026-06-06-overlay-layout-and-user-design.md
src/: App.tsx  constants.ts  index.css  overlayPalette.test.ts  overlayPalette.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: account.rs  aot_watcher.rs  bg_sampler.rs  config.rs  file_watcher.rs  jsonl_parser.rs  lib.rs  main.rs  oauth_fetcher.rs  tray.rs  types.rs
src/components/: FirstRunDialog.tsx  OverlayWindow.tsx  PlanBadge.test.tsx  PlanBadge.tsx  Settings.tsx  UsageBar.test.tsx  UsageBar.tsx
src/hooks/: useTauriEvents.test.ts  useTauriEvents.ts
src/stores/: usageStore.test.ts  usageStore.ts
